# american-alpine-club-articles

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
aac_articles/collectors/: README.md
aac_articles/collectors/collectors/: item_loaders.py  items.py  middlewares.py  pipelines.py  processors.py  settings.py
aac_articles/collectors/collectors/spiders/: articles.py
aac_articles/dataset/kaggle/: dataset-metadata.json
aac_articles/notebooks/: eda.ipynb
aac_articles/publishers/: README.md
aac_articles/publishers/kaggle/: __init__.py  publisher.py
american_alpine_club_articles/collectors/: scrapy.cfg
american_alpine_club_articles/collectors/collectors/: item_loaders.py  items.py  pipelines.py  settings.py
american_alpine_club_articles/collectors/collectors/spiders/: accidents.py
american_alpine_club_articles/raw/: dataset-metadata.json  sample.json
american_alpine_club_articles/uploader/: kaggle.py
